ftps/1.7/modules/ROOT/pages/ftps-documentation.adoc
= FTPS Connector Reference - Mule 4

Support Category: https://www.mulesoft.com/legal/versioning-back-support-policy#anypoint-connectors[Select]

FTPS Connector v1.7

Anypoint Connector for FTPS (FTPS Connector) enables you to manipulate files in an FTPS server.




== Configurations
---
[[config]]
=== Default Configuration

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| <<config_connection, FTPS Connection>>
 | The connection types to provide to this configuration. | | x
| Default write encoding(DEPRECATED) a| String |  This parameter is deprecated and not taken into account. |  |
| Time Between Size Check a| Number | This value specifies the wait time between size checks to determine if a file is ready to be read. |  |
| Time Between Size Check Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Specify the time unit to use in the wait time between size checks. |  `MILLISECONDS` |
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before the runtime considers it eligible for expiration. This does not mean that the platform expires the instance at the exact moment that it becomes eligible. The runtime purges the instances when appropriate. |  |
|===

==== Connection Types

[[config_connection]]
===== FTPS Connection

This configuration corresponds to a specialization of FTP connection provider that supports SSL.


====== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Working Directory a| String |  The directory to consider the root of every relative path used with this connector |  |
| Proxy a| One of:
* <<HttpTunnelProxy>>
* <<HttpsTunnelProxy>> | Enables you to set HTTP or HTTPS tunnel proxy. |  |
| Transfer Mode a| Enumeration, one of:

** BINARY
** ASCII |  Transfer mode to use |  BINARY |
| Passive a| Boolean |  Specifies whether to use passive mode. Set to `false` to switch to active mode. |  `true` |
| Enable Remote Verification a| Boolean |  Specifies whether or not to verify if the remote host taking part of a data connection is the same as the host to which the control connection is attached. |  `true` |
| Control Encoding a| String |  Set the control encoding (for example UTF-8) to use in the control channel with the remote server. This does NOT set the encoding for the content of the files to transfer. |  `ISO-8859-1` |
| Ftps Mode a| One of:

* <<FtpsExplicitMode>>
* <<FtpsImplicitMode>> |  |  |
| TLS Configuration a| <<Tls>> |  |  |
| Connection Timeout a| Number |  Connection timeout value |  `10` |
| Connection Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit to use in the Connection Timeout |  `SECONDS` |
| Response Timeout a| Number |  Response timeout value |  `10` |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit to use in the Response Timeout |  `SECONDS` |
| Host a| String |  |  | x
| Port a| Number |  |  21 |
| Username a| String |  |  |
| Password a| String |  |  |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to `true`, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Pooling Profile a| <<PoolingProfile>> |  Characteristics of the connection pool |  |
|===

== Supported Operations
* <<copy>>
* <<createDirectory>>
* <<delete>>
* <<list>>
* <<move>>
* <<read>>
* <<rename>>
* <<write>>

== Associated Sources
* <<listener>>


== Operations

[[copy]]
=== Copy
`<ftps:copy>`


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Source Path a| String |  |  | x
| Target Path a| String |  |  | x
| Create Parent Directories a| Boolean |  |  `true` |
| Overwrite a| Boolean |  |  `false` |
| Rename To a| String |  |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===


=== For Configurations
* <<config>>

==== Throws
* FTPS:ILLEGAL_PATH
* FTPS:RETRY_EXHAUSTED
* FTPS:FILE_ALREADY_EXISTS
* FTPS:CONNECTIVITY


[[createDirectory]]
=== Create Directory
`<ftps:create-directory>`


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Directory Path a| String |  |  | x
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===


=== For Configurations
* <<config>>

==== Throws
* FTPS:ILLEGAL_PATH
* FTPS:RETRY_EXHAUSTED
* FTPS:FILE_ALREADY_EXISTS
* FTPS:CONNECTIVITY
* FTPS:ACCESS_DENIED


[[delete]]
=== Delete
`<ftps:delete>`


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Path a| String |  |  | x
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===


=== For Configurations
* <<config>>

==== Throws
* FTPS:ILLEGAL_PATH
* FTPS:RETRY_EXHAUSTED
* FTPS:CONNECTIVITY
* FTPS:ACCESS_DENIED


[[list]]
=== List
`<ftps:list>`


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Directory Path a| String |  |  | x
| Recursive a| Boolean |  |  `false` |
| File Matching Rules a| <<matcher>> |  Matcher to filter the listed files |  |
| Time Between Size Check a| Number |  |  |
| Time Between Size Check Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  |  |
| Streaming Strategy a| * <<repeatable-in-memory-iterable>>
* <<repeatable-file-store-iterable>>
* non-repeatable-iterable |  Configure to use repeatable streams. |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Array of Message of [Any] payload and [<<FtpFileAttributes>>] attributes
|===

=== For Configurations
* <<config>>

==== Throws
* FTPS:ILLEGAL_PATH
* FTPS:ACCESS_DENIED


[[move]]
=== Move
`<ftps:move>`


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Source Path a| String |  |  | x
| Target Path a| String |  |  | x
| Create Parent Directories a| Boolean |  | `true` |
| Overwrite a| Boolean |  |  `false` |
| Rename To a| String |  |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===


=== For Configurations
* <<config>>

==== Throws
* FTPS:ILLEGAL_PATH
* FTPS:RETRY_EXHAUSTED
* FTPS:FILE_ALREADY_EXISTS
* FTPS:CONNECTIVITY


[[read]]
=== Read
`<ftps:read>`


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| File Path a| String |  |  | x
| Lock a| Boolean |  | `false` |
| Time Between Size Check a| Number |  |  |
| Time Between Size Check Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  |  |
| Output Mime Type a| String |  The MIME type of the payload that this operation outputs. |  |
| Output Encoding a| String |  The encoding of the payload that this operation outputs. |  |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configure to use repeatable streams. |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| <<FtpFileAttributes>>
|===

=== For Configurations
* <<config>>

==== Throws
* FTPS:ILLEGAL_PATH
* FTPS:FILE_LOCK
* FTPS:RETRY_EXHAUSTED
* FTPS:CONNECTIVITY
* FTPS:ACCESS_DENIED


[[rename]]
=== Rename
`<ftps:rename>`


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Path a| String |  |  | x
| New Name a| String |  |  | x
| Overwrite a| Boolean |  |  `false` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===


=== For Configurations
* <<config>>

==== Throws
* FTPS:ILLEGAL_PATH
* FTPS:RETRY_EXHAUSTED
* FTPS:FILE_ALREADY_EXISTS
* FTPS:CONNECTIVITY
* FTPS:ACCESS_DENIED


[[write]]
=== Write
`<ftps:write>`


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Path a| String |  |  | x
| Content a| Binary |  Content to be written into the file |  `#[payload]` |
| Encoding (DEPRECATED) a| String |  This parameter is deprecated and not taken into account for the operation execution. |  |
| Create Parent Directories a| Boolean |  |  `true` |
| Lock a| Boolean |  |  `false` |
| Write Mode a| Enumeration, one of:

** OVERWRITE
** APPEND
** CREATE_NEW |  How to write the file |  `OVERWRITE` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===


=== For Configurations
* <<config>>

==== Throws
* FTPS:ILLEGAL_PATH
* FTPS:FILE_LOCK
* FTPS:RETRY_EXHAUSTED
* FTPS:FILE_ALREADY_EXISTS
* FTPS:CONNECTIVITY
* FTPS:ACCESS_DENIED
* FTPS:ILLEGAL_CONTENT


== Sources

[[listener]]
=== On New or Updated File
`<ftps:listener>`


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use | | x
| Directory a| String |  |  |
| Recursive a| Boolean |  Whether or not to also catch files created on sub directories |  `true` |
| Matcher a| <<matcher>> |  |  |
| Watermark Enabled a| Boolean |  |  `false` |
| Time Between Size Check a| Number |  Wait time, in milliseconds, between size checks to determine if a file is ready to be read. |  |
| Time Between Size Check Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit to use in the wait time between size checks |  |
| Output Mime Type a| String |  The MIME type of the payload that this operation outputs. |  |
| Output Encoding a| String |  The encoding of the payload that this operation outputs. |  |
| Primary Node Only a| Boolean |  Whether to execute this source only on the primary node when running in a cluster |  |
| Scheduling Strategy a| scheduling-strategy |  Configures the scheduler that triggers the polling |  | x
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configure to use repeatable streams |  |
| Redelivery Policy a| <<RedeliveryPolicy>> |  Defines a policy for processing the redelivery of the same message |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
| Auto Delete a| Boolean |  |  `false` |
| Move To Directory a| String |  |  |
| Rename To a| String |  |  |
| Apply Post Action When Failed a| Boolean |  | `true` |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| <<FtpFileAttributes>>
|===

=== For Configurations
* <<config>>



== Types
[[Tls]]
=== Tls

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|===
| Field | Type | Description | Default Value | Required
| Enabled Protocols a| String | A comma separated list of protocols enabled for this context. |  |
| Enabled Cipher Suites a| String | A comma separated list of cipher suites enabled for this context. |  |
| Trust Store a| <<TrustStore>> |  |  |
| Key Store a| <<KeyStore>> |  |  |
| Revocation Check a| * <<standard-revocation-check>>
* <<custom-ocsp-responder>>
* <<crl-file>> |  |  |
|===

[[TrustStore]]
=== Truststore
Configures the TLS truststore.

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | Path to the truststore. Mule resolves the path relative to the current classpath and file system. |  |
| Password a| String | Password used to protect the truststore. |  |
| Type a| String | Type of truststore. |  |
| Algorithm a| String | Encryption algorithm that the truststore uses. |  |
| Insecure a| Boolean | If `true`, Mule stops performing certificate validations. Setting this to `true` can make connections vulnerable to attacks. |  |
|===

[[KeyStore]]
=== Key Store
Configures the keystore for the TLS protocol. The keystore you generate contains a private key and a public certificate.

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | Path to the keystore. Mule resolves the path relative to the current classpath and file system, if possible. |  |
| Type a| String | Type of keystore used. |  |
| Alias a| String | Alias of the key to use when the keystore contains multiple private keys. By default, Mule uses the first key in the file. |  |
| Key Password a| String | Password used to protect the private key. |  |
| Password a| String | Password used to protect the key store. |  |
| Algorithm a| String | Encryption algorithm that the keystore uses. |  |
|===

[[standard-revocation-check]]
=== Standard Revocation Check

Configures standard revocation checks for TLS certificates.

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|===
| Field | Type | Description | Default Value | Required
| Only End Entities a| Boolean | Verify the last element of the certificate chain only. |  |
| Prefer Crls a| Boolean | Try CRL instead of OCSP first. |  |
| No Fallback a| Boolean | Do not use the secondary checking method, which is the method not specified in the Prefer Crls field. |  |
| Soft Fail a| Boolean | Avoid verification failure when the revocation server cannot be reached or is busy. |  |
|===

[[custom-ocsp-responder]]
=== Custom Ocsp Responder

Configures a custom OCSP responder for certification revocation checks.

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|===
| Field | Type | Description | Default Value | Required
| Url a| String | URL of the OCSP responder. |  |
| Cert Alias a| String | Alias of the signing certicate for the OCSP response. If specified, the alias must be in the truststore. |  |
|===

[[crl-file]]

=== Crl File
Specifies the location of the certification revocation list (CRL) file.

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String |Path to the CRL file. |  |
|===


[[Reconnection]]
=== Reconnection

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | When the application is deployed, a connectivity test is performed on all connectors. If set to `true`, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> | The reconnection strategy to use. |  |
|===

[[reconnect]]
=== Reconnect

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect. | |
| Count a| Number | How many reconnection attempts to make. | |
| blocking |Boolean |If false, the reconnection strategy runs in a separate, non-blocking thread. |true |
|===

[[reconnect-forever]]
=== Reconnect Forever

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect. | |
| blocking |Boolean |If false, the reconnection strategy runs in a separate, non-blocking thread. |true |
|===


[[PoolingProfile]]
=== Pooling Profile

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Active a| Number | Controls the maximum number of Mule components that can be borrowed from a session at one time. When set to a negative value, there is no limit to the number of components that may be active at one time. When maxActive is exceeded, the pool is said to be exhausted. |  |
| Max Idle a| Number | Controls the maximum number of Mule components that can sit idle in the pool at any time. When set to a negative value, there is no limit to the number of Mule components that may be idle at one time. |  |
| Max Wait a| Number | Specifies the number of milliseconds to wait for a pooled component to become available when the pool is exhausted and the exhaustedAction is set to `WHEN_EXHAUSTED_WAIT`. |  |
| Min Eviction Millis a| Number | Determines the minimum amount of time an object may sit idle in the pool before it is eligible for eviction. When non-positive, no objects will be evicted from the pool due to idle time alone. |  |
| Eviction Check Interval Millis a| Number | Specifies the number of milliseconds between runs of the object evictor. When non-positive, no object evictor is executed. |  |
| Exhausted Action a| Enumeration, one of:

** WHEN_EXHAUSTED_GROW
** WHEN_EXHAUSTED_WAIT
** WHEN_EXHAUSTED_FAIL a| Specifies the behavior of the Mule component pool when the pool is exhausted. Possible values are:

* `WHEN_EXHAUSTED_FAIL` Will throw a NoSuchElementException
* `WHEN_EXHAUSTED_WAIT` Will block by invoking Object.wait(long) until a new or idle object is available
* `WHEN_EXHAUSTED_GROW` Will create a new Mule instance and return it, essentially making maxActive meaningless. If a positive maxWait value is supplied, it will block for, at most, that many milliseconds, after which a `NoSuchElementException` is thrown. If maxThreadWait is a negative value, it is blocked indefinitely. |  |
| Initialisation Policy a| Enumeration, one of:

** INITIALISE_NONE
** INITIALISE_ONE
** INITIALISE_ALL a| Determines how components in a pool should be initialized. The possible values are:

* `INITIALISE_NONE` Will not load any components into the pool on startup
* `INITIALISE_ONE` Will load one initial component into the pool on startup
* `INITIALISE_ALL` Will load all components in the pool on startup |  |
| Disabled a| Boolean | Whether pooling should be disabled |  |
|===

[[ExpirationPolicy]]
=== Expiration Policy

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | A scalar time value for the maximum amount of time a dynamic configuration instance should be allowed to be idle before it's considered eligible for expiration |  |
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | A time unit that qualifies the maxIdleTime attribute |  |
|===

[[FtpFileAttributes]]
=== Ftp File Attributes

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Timestamp a| DateTime |  |  |
| Name a| String |  |  | x
| Size a| Number |  |  | x
| Regular File a| Boolean |  | `false` |
| Directory a| Boolean |  | `false` |
| Symbolic Link a| Boolean |  | `false` |
| Path a| String |  |  | x
| File Name a| String |  |  | x
|===

[[matcher]]
=== Matcher

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Timestamp Since a| DateTime |  |  |
| Timestamp Until a| DateTime |  |  |
| Not Updated In The Last a| Number |  |  |
| Updated In The Last a| Number |  |  |
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  | SECONDS |
| Case Sensitive a| Boolean | Enables you to configure an external file system matcher as case sensitive or insensitive. | true |  
| Filename Pattern a| String |  |  |
| Path Pattern a| String |  |  |
| Directories a| Enumeration, one of:

** REQUIRE
** INCLUDE
** EXCLUDE |  | INCLUDE |
| Regular Files a| Enumeration, one of:

** REQUIRE
** INCLUDE
** EXCLUDE |  | INCLUDE |
| Sym Links a| Enumeration, one of:

** REQUIRE
** INCLUDE
** EXCLUDE |  | INCLUDE |
| Min Size a| Number |  |  |
| Max Size a| Number |  |  |
|===

[[repeatable-in-memory-stream]]
=== Repeatable In Memory Stream

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | The amount of memory that will be allocated to consume the stream and provide random access to it. If the stream contains more data than can be fit into this buffer, then the buffer expands according to the bufferSizeIncrement attribute, with an upper limit of maxInMemorySize. |  |
| Buffer Size Increment a| Number | This is by how much the buffer size expands if it exceeds its initial size. Setting a value of zero or lower means that the buffer should not expand, meaning that a `STREAM_MAXIMUM_SIZE_EXCEEDED` error is raised when the buffer gets full. |  |
| Max Buffer Size a| Number | The maximum amount of memory to use. If more than that is used then a `STREAM_MAXIMUM_SIZE_EXCEEDED` error is raised. A value lower than or equal to zero means no limit. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which all these attributes are expressed |  |
|===

[[repeatable-file-store-stream]]
=== Repeatable File Store Stream

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| In Memory Size a| Number | Defines the maximum memory the stream should use to keep data in memory. If more than that is consumed then it will start to buffer the content on disk. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which maxInMemorySize is expressed |  |
|===

[[RedeliveryPolicy]]
=== Redelivery Policy

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Redelivery Count a| Number | The maximum number of times a message can be redelivered and processed unsuccessfully before triggering process-failed-message |  |
| Use Secure Hash a| Boolean | Whether to use a secure hash algorithm to identify a redelivered message. |  |
| Message Digest Algorithm a| String | The secure hashing algorithm to use. If not set, the default is `SHA-256`. | `SHA-256` |
| Id Expression a| String | Defines one or more expressions to use to determine when a message has been redelivered. This property can be set only if useSecureHash is `false`. |  |
| Object Store a| Object Store | The object store where the redelivery counter for each message is stored. |  |
|===

[[repeatable-in-memory-iterable]]
=== Repeatable In Memory Iterable

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | The amount of instances that is initially be allowed to be kept in memory to consume the stream and provide random access to it. If the stream contains more data than can fit into this buffer, then the buffer expands according to the bufferSizeIncrement attribute, with an upper limit of maxInMemorySize. Default value is 100 instances. | `100` |
| Buffer Size Increment a| Number | This is by how much the buffer size expands if it exceeds its initial size. Setting a value of zero or lower means that the buffer should not expand, meaning that a `STREAM_MAXIMUM_SIZE_EXCEEDED` error is raised when the buffer gets full. Default value is 100 instances. | `100` |
| Max Buffer Size a| Number | The maximum amount of memory to use. If more than that is used then a `STREAM_MAXIMUM_SIZE_EXCEEDED` error is raised. A value lower than or equal to zero means no limit. |  |
|===

[[repeatable-file-store-iterable]]
=== Repeatable File Store Iterable

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| In Memory Objects a| Number | The maximum amount of instances to keep in memory. If more than this is required, then content starts to buffer on the disk. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which maxInMemorySize is expressed |  |
|===

[[FtpsExplicitMode]]
=== FTPS Explicit Mode

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Prot Setting a| Enumeration, one of:

** CLEAR
** PRIVATE |  |  |
|===

[[ProtSettingExporterSubType]]
=== Prot Setting Exporter Sub Type

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Prot Setting a| Enumeration, one of:

** CLEAR
** PRIVATE |  |  | x
|===

[[HttpTunnelProxy]]
=== HTTP Tunnel Proxy
[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|===
| Field | Type | Description | Default Value | Required
| Host a| String | The FTP proxy server host, such as www.mulesoft.com, localhost, or 192.168.0.1, etc. |  |
| Port a| Number | Port number of the FTP proxy server to connect. |  |
| Username a| String | Username for the FTP proxy server. Required if the proxy server is authenticated. |  |
| Password a| String | Password for the FTP proxy server. Required if the proxy server is authenticated. |  |
|===

[[HttpsTunnelProxy]]
=== HTTPS Tunnel Proxy

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|===
| Field | Type | Description | Default Value | Required
| Tls Context Factory a| <<Tls>> |  |  |
| Host a| String | The FTP proxy server host, such as www.mulesoft.com, localhost, or 192.168.0.1, etc. |  |
| Port a| Number | Port number of the FTP proxy server to connect. |  |
| Username a| String | Username for the FTP proxy server. Required if the proxy server is authenticated. |  |
| Password a| String | Password for the FTP proxy server. Required if the Proxy server is authenticated. |  |
|===




== See Also

* xref:release-notes::connector/connector-ftps.adoc[FTPS Connector Release Notes]
* https://help.mulesoft.com[MuleSoft Help Center]
